--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         clifford: '#da373d',
                         brown: '#737373',
                         green: '#ABEF5F',
-                        lightgreen: 'rgba(171, 239, 95, 0.2)',
+                        lightgreen: 'rgba(171, 239, 95, 0.5)',
+                        extralightgreen: 'rgba(171, 239, 95, 0.2)',
                         black: '#1C1C1C',
                     },
                 },
@@ -34,8 +35,8 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="manrope-font">
-    <header class="px-4 md:px-20 lg:px-52 bg-gradient-to-r from-white to-gray-100">
+<body class="manrope-font bg-gradient-to-r from-white to-gray-100">
+    <header class="px-4 md:px-20 lg:px-52">
         <nav>
             <div class="navbar bg-base-100 bg-inherit">
                 <div class="navbar-start">
@@ -83,11 +84,25 @@
               </div>
         </nav>
 
-
+        <section>
+            <div class="text-center space-y-6 mt-10 pb-10">
+                <div class="w-1/2 m-auto"><img src="/assets/banner.png" alt="House Image"></div>
+                <div>
+                    <h1 class="text-6xl font-extrabold w-4/5 m-auto" >A barn house of this design has a striking appearance</h1>
+                </div>
+                <div>
+                    <p class="m-auto md:w-3/4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                </div>
+                <div class=" m-auto btn flex bg-lightgreen rounded-full border-1 border-lime-300 w-11/12 md:w-1/6">
+                    <div><a class="font-bold text-xl">View Details</a></div>
+                    <div class=" rounded-full px-3 p-3 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                        </svg></svg>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
-
-
-
 
     <main></main>
 
