--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                        brown: '#737373',
+                        grayy: '#737373',
+                        para: 'rgba(73, 73, 73, 1)',
                         green: '#ABEF5F',
                         lightgreen: 'rgba(171, 239, 95, 0.5)',
                         extralightgreen: 'rgba(171, 239, 95, 0.2)',
@@ -36,7 +37,7 @@
 </head>
 
 <body class="manrope-font bg-gradient-to-r from-white to-gray-100">
-    <header class="px-4 md:px-20 lg:px-52">
+    <header class="px-8 md:px-20 lg:px-52">
         <nav>
             <div class="navbar bg-base-100 bg-inherit">
                 <div class="navbar-start">
@@ -49,10 +50,10 @@
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
                     <li><a class="font-extrabold">Home</a></li>
-                    <li><a class="text-brown">Services</a></li>
-                    <li><a class="text-brown">Portfolio</a></li>
-                    <li><a class="text-brown">Blogs</a></li>
-                    <li><a class="text-brown">Contact Us</a></li>
+                    <li><a class="text-grayy">Services</a></li>
+                    <li><a class="text-grayy">Portfolio</a></li>
+                    <li><a class="text-grayy">Blogs</a></li>
+                    <li><a class="text-grayy">Contact Us</a></li>
                   </ul>
                 </div>
                 <div class="navbar-end space-x-4 hidden md:flex">
@@ -75,10 +76,18 @@
                     </div>
                 </div>
                 <div class="ml-56 md:ml-4 lg:hidden">
-                    <div class="btn rounded-full bg-white px-3 ">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                          </svg>                                                       
+                    <div class="dropdown dropdown-end">
+                        <div tabindex="0" role="button" class="btn rounded-full bg-white p-3 ">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                              </svg>                                                       
+                        </div>
+                        <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
+                          <li><a class="text-grayy">Services</a></li>
+                          <li><a class="text-grayy">Portfolio</a></li>
+                          <li><a class="text-grayy">Blogs</a></li>
+                          <li><a class="text-grayy">Contact Us</a></li>
+                        </ul>
                     </div>
                 </div>
               </div>
@@ -91,11 +100,11 @@
                     <h1 class="text-6xl font-extrabold w-4/5 m-auto" >A barn house of this design has a striking appearance</h1>
                 </div>
                 <div>
-                    <p class="m-auto md:w-3/4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                    <p class="m-auto text-para md:w-3/4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
                 </div>
-                <div class=" m-auto btn flex bg-lightgreen rounded-full border-1 border-lime-300 w-11/12 md:w-1/6">
+                <div class=" m-auto btn flex bg-lightgreen rounded-full border-1 border-lime-300 w-11/12 lg:w-1/6">
                     <div><a class="font-bold text-xl">View Details</a></div>
-                    <div class=" rounded-full px-3 p-3 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
+                    <div class=" rounded-full p-2 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
                         </svg></svg>
                     </div>
@@ -104,7 +113,176 @@
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <section class="bg-gray-200">
+            <section class="px-8 pt-8 md:px-20 lg:px-52">
+                <div class="w-28 h-14 hidden relative right-12 lg:block">
+                    <img src="/assets/Vector.png" alt="">
+                </div>
+                <div class="lg:flex">
+                    <div class="w-full">
+                        <div class="h-1/2 text-center space-y-8 lg:text-left">
+                            <button class="btn rounded-full bg-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                                </svg>
+                                <p>About Us</p>                         
+                            </button>
+                            <h1 class="font-extrabold text-4xl lg:w-4/5">We design thoughtful, liveable spaces</h1>
+                            <p class="">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                        </div>
+                        <div class="md:flex md:flex-row lg:flex-col">
+                            <div class="flex bg-white rounded-xl m-4 p-5 ml-0">
+                                <div class="w-2/6"><img src="/assets/commercial.png" alt=""> </div>
+                                <div>
+                                    <h1 class="font-extrabold text-xl">Commercial</h1>
+                                    <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood accents.</p>
+                                </div>
+                            </div>
+                            <div class="flex bg-white rounded-xl m-4 p-5 ml-0">
+                                <div class="w-2/6"><img src="/assets/residential.png" alt=""></div>
+                                <div>
+                                    <h1 class="font-extrabold text-xl">Residential</h1>
+                                    <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood accents.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full flex justify-end"><img src="/assets/Rectangle.png"></div>
+                </div>
+            </section>
+
+            <section class="px-8 pt-4 mt-16 md:px-20 lg:px-52">
+                <div class="grid md:grid-cols-2 lg:grid-cols-4 px-12 rounded-2xl bg-white text-center ">
+                    <div class="p-6 py-10 space-y-3 flex flex-col justify-center items-center ">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+                        </svg>                          
+                        <h1 class="font-extrabold text-2xl">235+</h1>
+                        <p class="text-grayy">Happy Client Review</p>
+                    </div>
+                    <div class="p-6 py-10 space-y-3 flex flex-col justify-center items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 6.878V6a2.25 2.25 0 0 1 2.25-2.25h7.5A2.25 2.25 0 0 1 18 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 0 0 4.5 9v.878m13.5-3A2.25 2.25 0 0 1 19.5 9v.878m0 0a2.246 2.246 0 0 0-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0 1 21 12v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6c0-.98.626-1.813 1.5-2.122" />
+                        </svg>                          
+                        <h1 class="font-extrabold text-2xl">50+</h1>
+                        <p class="text-grayy">Work Departments</p>
+                    </div>
+                    <div class="p-6 py-10 space-y-3 flex flex-col justify-center items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.058 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z" />
+                        </svg> 
+                        <h1 class="font-extrabold text-2xl">30k+</h1>
+                        <p class="text-grayy">Our Happy Client</p>
+                    </div>
+                    <div class="p-6 py-10 space-y-3 flex flex-col justify-center items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z" />
+                        </svg>                          
+                        <h1 class="font-extrabold text-2xl">307+</h1>
+                        <p class="text-grayy">Staff Members</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="px-8 pt-4 mt-16 pb-24 text-center md:px-20 lg:px-52">
+                <div class="space-y-6 mb-8">
+                    <button class="btn rounded-full bg-white">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                        </svg>
+                        <p>How we works</p>                         
+                    </button>
+                    <h1 class="font-extrabold text-4xl">Our Works Process</h1>
+                    <p class="para lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div>
+                    <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 rounded-2xl text-left">
+                        <div class="p-6 py-10 space-y-3 rounded-2xl bg-pink-200">
+                            <img src="/assets/concept.png" alt="">                         
+                            <h1 class="font-extrabold text-2xl">Concept</h1>
+                            <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="p-6 py-10 space-y-3 rounded-2xl bg-yellow-400">
+                            <img src="/assets/flow-chart.png" alt="">                          
+                            <h1 class="font-extrabold text-2xl">Design Process</h1>
+                            <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="p-6 py-10 space-y-3 rounded-2xl bg-teal-300">
+                            <img src="/assets/vision.png" alt="">
+                            <h1 class="font-extrabold text-2xl">Supervision</h1>
+                            <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="p-6 py-10 space-y-3 rounded-2xl bg-sky-400">
+                            <img src="/assets/budget-planning.png" alt="">                         
+                            <h1 class="font-extrabold text-2xl">Budget Planning</h1>
+                            <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <section class="px-8 pt-4 mt-16 md:px-20 lg:px-52">
+            <div class="space-y-6 text-center">
+                <button class="btn rounded-full bg-extralightgreen">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                    <p>Explore our Latest works</p>                         
+                </button>
+                <h1 class="font-extrabold text-4xl">Our Latest Portfolio</h1>
+                <p class="para lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="grid gap-3 md:grid-cols-2 lg:grid-cols-9">
+                <div class="md:flex rounded-2xl border p-4 md:col-span-2 lg:col-span-6">
+                    <div class="md:w-3/4"><img src="/assets/img1.png" alt="" class="w-full h-full"></div>
+                    <div class="p-4 space-y-6">
+                        <h1 class="font-extrabold text-2xl">Commercial</h1>
+                        <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <button class="flex space-x-2">
+                            <div><a class="font-bold text-xl">View Details</a></div>
+                            <div class=" rounded-full p-2 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                            </svg>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="border rounded-2xl lg:col-span-3 p-4">
+                    <img src="/assets/img2.png" alt="" class="w-full h-full">
+                </div>
+                <div class="border rounded-2xl p-4 lg:hidden sm:hidden md:block">
+                    <img src="/assets/img5.png" alt="" class="w-full">
+                </div>
+                <div class="border rounded-2xl p-4 hidden lg:block lg:col-span-2">
+                    <img src="/assets/img3.png" alt="" class="w-full">
+                </div>
+                <div class="p-4 rounded-2xl md:flex border md:col-span-2 lg:col-span-5">
+                    <div class="md:w-2/4"><img src="/assets/img4.png" alt="" class="w-full h-full"></div>
+                    <div class="p-4 space-y-6">
+                        <h1 class="font-extrabold text-2xl">Commercial</h1>
+                        <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <button class="flex space-x-2">
+                            <div><a class="font-bold text-xl">View Details</a></div>
+                            <div class=" rounded-full p-2 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                            </svg>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="border rounded-2xl p-4 lg:hidden">
+                    <img src="/assets/img3.png" alt="" class="w-full">
+                </div>
+                <div class="border rounded-2xl p-4 lg:col-span-2">
+                    <img src="/assets/img5.png" alt="" class="w-full">
+                </div>
+            </div>
+        </section>
+
+        
+    </main>
 
     <footer></footer>
 </body>
