--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </section>
         </section>
 
-        <section class="px-8 pt-4 mt-16 md:px-20 lg:px-52">
+        <section class="px-8 py-24 mt-16 md:px-20 lg:px-52">
             <div class="space-y-6 text-center">
                 <button class="btn rounded-full bg-extralightgreen">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
@@ -281,7 +281,139 @@
             </div>
         </section>
 
-        
+        <section class="px-8 py-24 bg-gray-100 md:px-20 lg:px-52">
+            <div class="space-y-6 mb-8 text-center">
+                <button class="btn rounded-full bg-extralightgreen">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                    <p>Rinterio News</p>                         
+                </button>
+                <h1 class="font-extrabold text-4xl">Read Our Articles and News</h1>
+                <p class="para lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="lg:flex gap-6">
+                <div class="p-6 rounded-2xl mb-6 md:flex lg:block bg-white" >
+                    <div><img src="/assets/article1.png" alt="" class="w-full h-full"></div>
+                    <div class="p-4 space-y-4">
+                        <div class="flex space-x-4 text-grayy">
+                            <div class="flex space-x-2">
+                                <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
+                                  </svg>
+                                </div>
+                                <div>August23,2024</div>
+                            </div>
+                            <div class="flex space-x-2">
+                                <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                  </svg>
+                                </div>
+                                <div>By Admin</div>
+                            </div>
+                        </div>
+                        <h1 class="font-extrabold text-2xl">How to choose the furniture right  of your home.</h1>
+                        <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <button class="flex space-x-2">
+                            <div><a class="font-bold text-xl">Read More</a></div>
+                            <div class=" rounded-full p-2 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                            </svg>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="p-6 rounded-2xl mb-6 md:flex lg:block bg-white" >
+                    <div><img src="/assets/article2.png" alt="" class="w-full h-full"></div>
+                    <div class="p-4 space-y-4">
+                        <div class="flex space-x-4 text-grayy">
+                            <div class="flex space-x-2">
+                                <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
+                                  </svg>
+                                </div>
+                                <div>August23,2024</div>
+                            </div>
+                            <div class="flex space-x-2">
+                                <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                  </svg>
+                                </div>
+                                <div>By Admin</div>
+                            </div>
+                        </div>
+                        <h1 class="font-extrabold text-2xl">How to choose the furniture right  of your home.</h1>
+                        <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <button class="flex space-x-2">
+                            <div><a class="font-bold text-xl">Read More</a></div>
+                            <div class=" rounded-full p-2 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                            </svg>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="p-6 rounded-2xl mb-6 md:flex lg:block bg-white" >
+                    <div><img src="/assets/article3.png" alt="" class="w-full h-full"></div>
+                    <div class="p-4 space-y-4">
+                        <div class="flex space-x-4 text-grayy">
+                            <div class="flex space-x-2">
+                                <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
+                                  </svg>
+                                </div>
+                                <div>August23,2024</div>
+                            </div>
+                            <div class="flex space-x-2">
+                                <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                  </svg>
+                                </div>
+                                <div>By Admin</div>
+                            </div>
+                        </div>
+                        <h1 class="font-extrabold text-2xl">How to choose the furniture right  of your home.</h1>
+                        <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <button class="flex space-x-2">
+                            <div><a class="font-bold text-xl">Read More</a></div>
+                            <div class=" rounded-full p-2 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-black">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                            </svg>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="px-8 py-24 md:px-20 lg:px-52 bg-[url('/assets/bg.jpg')]">
+            <div class="space-y-6 mb-8 text-center">
+                <button class="btn rounded-full bg-extralightgreen">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                    <p>Let's Connect</p>                         
+                </button>
+                <h1 class="font-extrabold text-4xl">Let’s Discuss Next Project</h1>
+                <p class="para lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div>
+                <div class="grid gap-10 md:grid-cols-2">
+                    <div><input type="text" placeholder="First Name*" class="w-full p-4 rounded-full"></div>
+                    <div><input type="text" placeholder="Last Name*" class="w-full p-4 rounded-full"></div>
+                    <div><input type="number" placeholder="Phone Number*" class="w-full p-4 rounded-full"></div>
+                    <div><input type="email" placeholder="Email Number*" class="w-full p-4 rounded-full"></div>
+                    <div class="sm:col-span-2"><input type="text" placeholder="Write your message here" class="w-full p-4 rounded-3xl h-64"></div>
+                </div>
+                <div class="btn flex bg-green rounded-full mt-8">
+                    <div><a class="bg-inherit">Send Mail</a></div>
+                    <div class=" rounded-full px-3 bg-black p-3 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-3 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                        </svg></svg>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
