--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         green: '#ABEF5F',
                         lightgreen: 'rgba(171, 239, 95, 0.5)',
                         extralightgreen: 'rgba(171, 239, 95, 0.2)',
-                        black: '#1C1C1C',
+                        blackk: '#1C1C1C',
                     },
                 },
             },
@@ -416,6 +416,34 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer class="px-8 py-16 bg-blackk md:px-20 lg:px-52 ">
+        <section class="flex flex-col items-center space-y-12">
+            <div class="space-y-4">
+                <div class="flex space-x-2 justify-center">
+                        <div class=" rounded-full p-2 bg-green "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 text-black">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                        </svg></div>
+                        <div><a class="font-extrabold text-3xl text-white">Rinterio</a></div>
+                </div>
+                <div><p class="text-grayy w-3/4 text-center mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p></div>
+            </div>
+            <div>
+                <ul class=" md:flex md:space-x-32 text-white px-1">
+                  <li><a> Home</a></li><br>
+                  <li><a>Services</a></li><br>
+                  <li><a>Portfolio</a></li><br>
+                  <li><a>Blogs</a></li><br>
+                  <li><a>Contact Us</a></li>
+                </ul>
+              </div>
+              <div class="btn flex bg-green border-none rounded-full w-full md:w-1/4 lg:w-1/6">
+                <div><a class="bg-inherit">Book Consult</a></div>
+                <div class=" rounded-full px-3 bg-black p-3 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-4 text-white">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                    </svg></svg>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
