--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <section>
             <div class="text-center space-y-6 mt-10 pb-10">
-                <div class="w-1/2 m-auto"><img src="/assets/banner.png" alt="House Image"></div>
+                <div class="w-1/2 m-auto"><img src="assets/banner.png" alt="House Image"></div>
                 <div>
                     <h1 class="text-6xl font-extrabold w-4/5 m-auto" >A barn house of this design has a striking appearance</h1>
                 </div>
@@ -117,7 +117,7 @@
         <section class="bg-gray-200">
             <section class="px-8 pt-8 md:px-20 lg:px-52">
                 <div class="w-28 h-14 hidden relative right-12 lg:block">
-                    <img src="/assets/Vector.png" alt="">
+                    <img src="assets/Vector.png" alt="">
                 </div>
                 <div class="lg:flex">
                     <div class="w-full">
@@ -133,14 +133,14 @@
                         </div>
                         <div class="md:flex md:flex-row lg:flex-col">
                             <div class="flex bg-white rounded-xl m-4 p-5 ml-0">
-                                <div class="w-2/6"><img src="/assets/commercial.png" alt=""> </div>
+                                <div class="w-2/6"><img src="assets/commercial.png" alt=""> </div>
                                 <div>
                                     <h1 class="font-extrabold text-xl">Commercial</h1>
                                     <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood accents.</p>
                                 </div>
                             </div>
                             <div class="flex bg-white rounded-xl m-4 p-5 ml-0">
-                                <div class="w-2/6"><img src="/assets/residential.png" alt=""></div>
+                                <div class="w-2/6"><img src="assets/residential.png" alt=""></div>
                                 <div>
                                     <h1 class="font-extrabold text-xl">Residential</h1>
                                     <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood accents.</p>
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-full flex justify-end"><img src="/assets/Rectangle.png"></div>
+                    <div class="w-full flex justify-end"><img src="assets/Rectangle.png"></div>
                 </div>
             </section>
 
@@ -199,22 +199,22 @@
                 <div>
                     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 rounded-2xl text-left">
                         <div class="p-6 py-10 space-y-3 rounded-2xl bg-pink-200">
-                            <img src="/assets/concept.png" alt="">                         
+                            <img src="assets/concept.png" alt="">                         
                             <h1 class="font-extrabold text-2xl">Concept</h1>
                             <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
                         </div>
                         <div class="p-6 py-10 space-y-3 rounded-2xl bg-yellow-400">
-                            <img src="/assets/flow-chart.png" alt="">                          
+                            <img src="assets/flow-chart.png" alt="">                          
                             <h1 class="font-extrabold text-2xl">Design Process</h1>
                             <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
                         </div>
                         <div class="p-6 py-10 space-y-3 rounded-2xl bg-teal-300">
-                            <img src="/assets/vision.png" alt="">
+                            <img src="assets/vision.png" alt="">
                             <h1 class="font-extrabold text-2xl">Supervision</h1>
                             <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
                         </div>
                         <div class="p-6 py-10 space-y-3 rounded-2xl bg-sky-400">
-                            <img src="/assets/budget-planning.png" alt="">                         
+                            <img src="assets/budget-planning.png" alt="">                         
                             <h1 class="font-extrabold text-2xl">Budget Planning</h1>
                             <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
                         </div>
@@ -236,7 +236,7 @@
             </div>
             <div class="grid gap-3 md:grid-cols-2 lg:grid-cols-9">
                 <div class="md:flex rounded-2xl border p-4 md:col-span-2 lg:col-span-6">
-                    <div class="md:w-3/4"><img src="/assets/img1.png" alt="" class="w-full h-full"></div>
+                    <div class="md:w-3/4"><img src="assets/img1.png" alt="" class="w-full h-full"></div>
                     <div class="p-4 space-y-6">
                         <h1 class="font-extrabold text-2xl">Commercial</h1>
                         <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
@@ -250,16 +250,16 @@
                     </div>
                 </div>
                 <div class="border rounded-2xl lg:col-span-3 p-4">
-                    <img src="/assets/img2.png" alt="" class="w-full h-full">
+                    <img src="assets/img2.png" alt="" class="w-full h-full">
                 </div>
                 <div class="border rounded-2xl p-4 lg:hidden sm:hidden md:block">
-                    <img src="/assets/img5.png" alt="" class="w-full">
+                    <img src="assets/img5.png" alt="" class="w-full">
                 </div>
                 <div class="border rounded-2xl p-4 hidden lg:block lg:col-span-2">
-                    <img src="/assets/img3.png" alt="" class="w-full">
+                    <img src="assets/img3.png" alt="" class="w-full">
                 </div>
                 <div class="p-4 rounded-2xl md:flex border md:col-span-2 lg:col-span-5">
-                    <div class="md:w-2/4"><img src="/assets/img4.png" alt="" class="w-full h-full"></div>
+                    <div class="md:w-2/4"><img src="assets/img4.png" alt="" class="w-full h-full"></div>
                     <div class="p-4 space-y-6">
                         <h1 class="font-extrabold text-2xl">Commercial</h1>
                         <p class="text-grayy">The barn house captivates with its blend of rustic charm and modern.</p>
@@ -273,10 +273,10 @@
                     </div>
                 </div>
                 <div class="border rounded-2xl p-4 lg:hidden">
-                    <img src="/assets/img3.png" alt="" class="w-full">
+                    <img src="assets/img3.png" alt="" class="w-full">
                 </div>
                 <div class="border rounded-2xl p-4 lg:col-span-2">
-                    <img src="/assets/img5.png" alt="" class="w-full">
+                    <img src="assets/img5.png" alt="" class="w-full">
                 </div>
             </div>
         </section>
@@ -294,7 +294,7 @@
             </div>
             <div class="lg:flex gap-6">
                 <div class="p-6 rounded-2xl mb-6 md:flex lg:block bg-white" >
-                    <div><img src="/assets/article1.png" alt="" class="w-full h-full"></div>
+                    <div><img src="assets/article1.png" alt="" class="w-full h-full"></div>
                     <div class="p-4 space-y-4">
                         <div class="flex space-x-4 text-grayy">
                             <div class="flex space-x-2">
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="p-6 rounded-2xl mb-6 md:flex lg:block bg-white" >
-                    <div><img src="/assets/article2.png" alt="" class="w-full h-full"></div>
+                    <div><img src="assets/article2.png" alt="" class="w-full h-full"></div>
                     <div class="p-4 space-y-4">
                         <div class="flex space-x-4 text-grayy">
                             <div class="flex space-x-2">
@@ -354,7 +354,7 @@
                     </div>
                 </div>
                 <div class="p-6 rounded-2xl mb-6 md:flex lg:block bg-white" >
-                    <div><img src="/assets/article3.png" alt="" class="w-full h-full"></div>
+                    <div><img src="assets/article3.png" alt="" class="w-full h-full"></div>
                     <div class="p-4 space-y-4">
                         <div class="flex space-x-4 text-grayy">
                             <div class="flex space-x-2">
@@ -398,7 +398,7 @@
                 <p class="para lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
             <div>
-                <div class="grid gap-10 md:grid-cols-2">
+                <div class="grid gap-10 grid-cols-1 md:grid-cols-2">
                     <div><input type="text" placeholder="First Name*" class="w-full p-4 rounded-full"></div>
                     <div><input type="text" placeholder="Last Name*" class="w-full p-4 rounded-full"></div>
                     <div><input type="number" placeholder="Phone Number*" class="w-full p-4 rounded-full"></div>
