--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="text-center space-y-6 mt-10 pb-10">
                 <div class="w-1/2 m-auto"><img src="assets/banner.png" alt="House Image"></div>
                 <div>
-                    <h1 class="text-6xl font-extrabold w-4/5 m-auto" >A barn house of this design has a striking appearance</h1>
+                    <h1 class="md:text-6xl text-3xl font-extrabold w-4/5 m-auto" >A barn house of this design has a striking appearance</h1>
                 </div>
                 <div>
                     <p class="m-auto text-para md:w-3/4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
@@ -386,7 +386,7 @@
             </div>
         </section>
 
-        <section class="px-8 py-24 md:px-20 lg:px-52 bg-[url('/assets/bg.jpg')]">
+        <section class="px-8 py-24 md:px-20 lg:px-52 bg-cover bg-[url('assets/bg.jpg')]">
             <div class="space-y-6 mb-8 text-center">
                 <button class="btn rounded-full bg-extralightgreen">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
